Description
File tested: cmd.exe (reactos-bootcd-0.4.15-dev-537-g35de9f3-x86)
Steps to reproduce the error:
1. Start ReactOS or Windows XP.
2. Run ReactOS CMD.
3. Run a batch with this content:
echo "Let's break ReactOS" > example.txt |
for /l %%i in (1,1,2) do type example.txt >> example.txt |
-------
Expected result with the Windows CMD: Finishes with 4 lines written.
Result in ReactOS with the ReactOS CMD: A typing infinite loop of the string start. The system is not able to handle with it, mostly freeze in the loop.
Result in XP-SP3 with the ReactOS CMD: A typing infinite loop of the string start. The system is continuing the loop until you got null space.
Attachments
Issue Links
- blocks
-
CORE-8002 METABUG - cmd.exe Command-line interpreter bugs
-
- Open
-
- relates to
-
CORE-14591 cmd: "type" command may display data outside buffer
-
- Resolved
-